Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.30
-
None
Description
Messages that expire on the client, i.e. after being received from the server but before being fetched by the application, do not result in the credit window being moved (or in a new credit being issued in the case of capacity 0).
The expiration of messages on the client was added for QPID-5828.