QPID-7234: allow proper credit processing to happen even for expired messages

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1741491 13f79535-47bb-0310-9956-ffa450edef68